# RoboWeave

./: .gitignore  LICENSE  README.md  README_zh.md
.kiro/steering/: python-env.md
roboweave_bringup/: package.xml  setup.py
roboweave_bringup/config/: system_params.yaml
roboweave_bringup/launch/: full_system.launch.py  sim_system.launch.py
roboweave_cloud_agent/: pyproject.toml
roboweave_cloud_agent/config/: cloud_agent_params.yaml
roboweave_cloud_agent/proto/: cloud_agent.proto
roboweave_cloud_agent/src/roboweave_cloud_agent/: __init__.py  __main__.py  agent.py  config.py  converters.py  grpc_server.py  recovery_advisor.py  skill_selector.py  task_decomposer.py
roboweave_cloud_agent/tests/: conftest.py
roboweave_control/: package.xml  setup.cfg  setup.py
roboweave_control/config/: control_params.yaml  sim_arm.yaml  sim_gripper.yaml
roboweave_control/launch/: control.launch.py
roboweave_control/roboweave_control/: __init__.py  control_node.py  converters.py  gripper_controller.py  trajectory_executor.py
roboweave_control/tests/: conftest.py
roboweave_data/: package.xml  setup.cfg  setup.py
roboweave_data/config/: data_params.yaml
roboweave_data/launch/: data.launch.py
roboweave_data/roboweave_data/: __init__.py  converters.py  data_exporter.py  data_node.py  episode_recorder.py  failure_miner.py  frame_logger.py  label_generator.py  skill_logger.py  version_tracker.py
roboweave_data/tests/: conftest.py
roboweave_interfaces/: pyproject.toml
roboweave_interfaces/roboweave_interfaces/: __init__.py  _version.py  base.py  control.py  episode.py  errors.py  event.py  grasp.py  hardware.py  hitl.py  motion.py  perception.py  refs.py  safety.py  skill.py  task.py  vla.py  world_state.py
roboweave_interfaces/tests/: conftest.py
roboweave_msgs/: CMakeLists.txt  package.xml
roboweave_msgs/action/: CallSkill.action  ExecuteTrajectory.action  PlanMotion.action  RunVLASkill.action  TrackPose.action
roboweave_msgs/msg/: ArmState.msg  BoundingBox3D.msg  CollisionPair.msg  DataRef.msg  DepthRef.msg  Detection.msg  ExecutionEvent.msg  GraspCandidate.msg  GraspConstraints.msg  GripperState.msg  HITLRequestMsg.msg  ImageRef.msg  JsonEnvelope.msg  MaskRef.msg  PointCloudRef.msg  ReachabilityResult.msg  RobotStateMsg.msg  SafetyStatus.msg  TaskStatus.msg  TeleopCommand.msg  TrajectoryRef.msg  VLASafetyConstraints.msg  WorldStateRef.msg  WorldStateStamped.msg  WorldStateUpdate.msg
roboweave_msgs/srv/: BuildPointCloud.srv  CheckCollision.srv  CheckReachability.srv  DetectObjects.srv  DispatchPlan.srv  EpisodeControl.srv  EstimatePose.srv  FilterVLAAction.srv  GetSystemVersions.srv  GripperCommand.srv  HITLRespond.srv  ListSkills.srv  PlanGrasp.srv  QueryWorldState.srv  RequestRecovery.srv  SafetyControl.srv  SegmentObject.srv  SkillHealth.srv  TaskControl.srv  UpdateWorldState.srv
roboweave_perception/: package.xml  setup.cfg  setup.py
roboweave_perception/config/: model_registry.yaml  perception_params.yaml
roboweave_perception/launch/: perception.launch.py
roboweave_perception/roboweave_perception/: __init__.py  backend_registry.py  converters.py  detector.py  perception_node.py  point_cloud_builder.py  pose_estimator.py  pose_tracker.py  segmentor.py
roboweave_perception/tests/: conftest.py
roboweave_planning/: package.xml  setup.cfg  setup.py
roboweave_planning/config/: planning_backends.yaml  planning_params.yaml
roboweave_planning/launch/: planning.launch.py
roboweave_planning/roboweave_planning/: __init__.py  backend_registry.py  collision_checker.py  converters.py  grasp_planner.py  ik_solver.py  motion_planner.py  planning_node.py
roboweave_planning/roboweave_planning/backends/: __init__.py  mock_collision_checker.py  mock_grasp_planner.py  mock_ik_solver.py  simple_motion_planner.py
roboweave_planning/tests/: conftest.py
roboweave_runtime/: package.xml  setup.cfg  setup.py
roboweave_runtime/config/: runtime_params.yaml
roboweave_runtime/launch/: runtime.launch.py
roboweave_runtime/roboweave_runtime/: __init__.py  cloud_bridge.py  converters.py  execution_monitor.py  hitl_manager.py  resource_manager.py  runtime_node.py  skill_orchestrator.py  task_executor.py  world_model.py
roboweave_runtime/tests/: conftest.py
roboweave_safety/: package.xml  setup.cfg  setup.py
roboweave_safety/config/: safety_params.yaml  workspace_limits.yaml
roboweave_safety/launch/: safety.launch.py
roboweave_safety/roboweave_safety/: __init__.py  converters.py  safety_guard.py  safety_monitor.py  safety_supervisor_node.py  vla_safety_filter.py
roboweave_safety/tests/: __init__.py  test_converters.py  test_safety_guard.py  (+3 more)
roboweave_vla/: package.xml  setup.cfg  setup.py
(+70 files in other folders)
