[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboweave-interfaces"
version = "0.1.0"
description = "Pure Python data structures for the RoboWeave robotics system"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["roboweave_interfaces*"]
